test_inputs/good/phi_interval.lat
int main() {
    int a = readInt();

    if (a < 0) {
        a = 0;
    }

    printInt(a);

    return 0;
}