test_inputs/bad/invalid_main_2.lat
int main(int arg) {
    return arg;
}
